--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 <h1>Definicion Firebase</h1>
 
 <p> Es una plataforma ubicada en la nube, integrada con Google Cloud Platform, que usa un conjunto de herramientas para la 
-creación y sincronización de proyectos que serán dotados de alta calidad, haciendo posible el crecimiento del número de usuarios 
-y dando resultado también a la obtención de una mayor monetización</p>
+creacion y sincronizacion de proyectos que seran dotados de alta calidad, haciendo posible el crecimiento del número de usuarios 
+y dando resultado también a la obtencion de una mayor monetizacion</p>
 
 <h1>Pros</h1>
 
-<ul> <li> Sincronizar fácilmente los datos de sus proyectos sin tener que administrar conexiones o escribir lógica de sincronización compleja.</li> 
-    <li> Usa un conjunto de herramientas multiplataforma: se integra fácilmente para plataformas web como en aplicaciones móviles. Es compatible con grandes plataformas, como IOS, Android, aplicaciones web, Unity y C++.</li> 
-    <li> Usa la infraestructura de Google y escala automáticamente para cualquier tipo de aplicación, desde las más pequeñas hasta las más potentes.</li> 
-    <li> Crea proyectos sin necesidad de un servidor: Las herramientas se incluyen en los SDK para los dispositivos móviles y web, por lo que no es necesario la creación de un servidor para el proyecto.</li> </ul>
+<ul> <li> Sincronizar facilmente los datos de sus proyectos sin tener que administrar conexiones o escribir logica de sincronizacion compleja.</li> 
+    <li> Usa un conjunto de herramientas multiplataforma: se integra facilmente para plataformas web como en aplicaciones moviles. Es compatible con grandes plataformas, como IOS, Android, aplicaciones web, Unity y C++.</li> 
+    <li> Usa la infraestructura de Google y escala automaticamente para cualquier tipo de aplicacion, desde las mas pequeñas hasta las mas potentes.</li> 
+    <li> Crea proyectos sin necesidad de un servidor: Las herramientas se incluyen en los SDK para los dispositivos moviles y web, por lo que no es necesario la creacion de un servidor para el proyecto.</li> </ul>
 
 <h1>Contras</h1>
 <ul>
 <li> Despues de 10GB de descarga, el servicio deja de ser gratuito </li> 
-<li> En la versión gratuita de Firebase solamente puedes tener como máximo, 100 conexiones simultáneas. Para conexiones simultáneas ilimitadas deberás pagar por una cuenta con más capacidad y funcionalidades. </li> 
+<li> En la version gratuita de Firebase solamente puedes tener como maximo, 100 conexiones simultaneas. Para conexiones simultaneas ilimitadas deberas pagar por una cuenta con mas capacidad y funcionalidades. </li> 
 <li> Base de datos no tan complejas </li> 
-<li> El servicio de realizar testing de tu apk en la nube, es algo que nos ha gustado a todos. Pero tenemos restricciones en la versión gratuita. Solamente puedes hacer pruebas en 15 dispositivos por día, de los cuales, solo 5 dispositivos son físicos, los demás son virtualizados. </li> 
+<li> El servicio de realizar testing de tu apk en la nube, es algo que nos ha gustado a todos. Pero tenemos restricciones en la version gratuita. Solamente puedes hacer pruebas en 15 dispositivos por día, de los cuales, solo 5 dispositivos son físicos, los demas son virtualizados. </li> 
 </ul>
 
 <h1>Servicios que nos ofrece: </h1>
